--- a/views/farms.hbs
+++ b/views/farms.hbs
@@ -152,6 +152,7 @@
                                                         <th style="">Type</th>
                                                         <th style="">CROP PLAN</th>
                                                         <th style="">Date Due</th>
+                                                        <th style="">Date Completed</th>
                                                         <th style="">notes</th>
                                                         <th style="">Status</th>
                                                     </tr>
@@ -165,6 +166,7 @@
                                                         <td>{{this.type}}</td>
                                                         <td>{{this.crop_plan}}</td>
                                                         <td>{{this.date_due}}</td>
+                                                         <td>{{this.date_completed}}</td>
                                                         <td style="word-wrap:break-word;">{{this.notes}}</td>
                                                         <td class="{{this.status}}"> {{this.status}} 
                                                             <span>
