--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-6 text-black"> 
         
-        <div class="card shadow mb-4 d-flex" style="align-items: center; display: flex; justify-content: center; max-height: 550px; margin-top: 60px !important; max-width: 600px; margin: 0px auto;">
+        <div class="card shadow mb-4 d-flex" style="align-items: center; display: flex; justify-content: center; max-height: 550px; margin-top: 70px !important; max-width: 600px; margin: 0px auto;">
           
         <div class="px-5 ms-xl-4 d-flex align-items-center">
           {{!-- <i class="fa fa-sign-in fa-2x me-3 pt-5 mt-xl-4" style="color: #657429;"></i> --}}
@@ -51,7 +51,7 @@
       </div>
       <div class="col-sm-6 px-0 d-none d-sm-block">
         <img src="../../images/farm-background.png"
-          alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
+          alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left; margin-left: 12px">
       </div>
     </div>
   </div>
