--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -100,14 +100,14 @@
 
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item notSidebar" href="#" data-toggle="modal" data-target="#change_date_modal" data-whatever="@mdo">
-                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-white-400"></i>&nbsp;Change Date</a>
+                 <i class="fa fa-calendar fa-sm fa-fw mr-2 text-white-400"></i>&nbsp;Change Date</a>
                 </a>
 
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item notSidebar" href="#" data-toggle="modal" data-target="#wo_shortcut_modal" data-whatever="@mdo">
-                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-white-400"></i>&nbsp;Finish WO Shortcut</a>
+                 <i class="fa fa-flag-checkered fa-sm fa-fw mr-2 text-white-400"></i>&nbsp;Finish WO Shortcut</a>
                 </a>
-
+    
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item notSidebar" href="/logout">
                      <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-white-400"></i>&nbsp;Logout</a>
