--- a/views/add_crop_calendar.hbs
+++ b/views/add_crop_calendar.hbs
@@ -8,6 +8,10 @@ li > span {
     color:#332C1F;
 }
 
+img.float-center.text-center {
+    margin-left: 20px !important;
+}
+
 </style>
 
 <div class="container-fluid" style="color: #332C1F;">
