--- a/views/home_v2.hbs
+++ b/views/home_v2.hbs
@@ -216,7 +216,7 @@
 
                             <div class="card shadow mb-4">
                                 <div class="card-header d-flex justify-content-between align-items-center" style="background: #939C1F;padding: 16px 20px;height: auto;">
-                                    <h6 class="font-weight-bold m-0" style="color: #FFFFFF;">Upcoming Work Orders</h6>
+                                    <h6 class="font-weight-bold m-0" style="color: #FFFFFF;">Upcoming/Ongoing Work Orders</h6>
                                 </div>
                                 <div class="card-body" style="height: 892px; max-width: inherit; max-height: 892px; overflow-y: auto; color:#332C1F !important">
                                     <ul class="list-group" style="width: 100%;">
