--- a/views/user_management.hbs
+++ b/views/user_management.hbs
@@ -146,7 +146,7 @@
                                               {{#if user_id}}
                                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked disabled>
                                               {{else}}
-                                                <input class="form-check-input" name="register_checkbox" type="checkbox" value="{{this.employee_id}}" id="flexCheckChecked">
+                                                <input class="form-check-input checkBOX" name="register_checkbox" type="checkbox" value="{{this.employee_id}}" id="flexCheckChecked" onclick="ckChange(this)">
                                               {{/if}}
                                           
                                             </div>
@@ -258,6 +258,7 @@
           $(select).val(0);
           break;
       }
+          
     }
     else {
       $(select).prop('disabled', true);
@@ -267,6 +268,7 @@
     if ($(`input[name="register_checkbox"]:checked`).length > 0) {
       $(`#btn_submit`).removeClass('hide');
     }
+
     else {
       $(`#btn_submit`).addClass('hide');
     }
@@ -335,4 +337,15 @@ function fixStepIndicator(n) {
   x[n].className += " active";
 }
 
+</script>
+
+<script>
+
+// Disables other checkboxes if one is checked (this solution is still limited to other pagination pages)
+function ckChange(el) {
+    var ckName = document.getElementsByName(el.name);
+    for (var i = 0, c; c = ckName[i]; i++) {
+      c.disabled = !(!el.checked || c === el);
+    }
+}
 </script>
