Minor UI Changes (added margin to checkboxes of create crop calendar's step 3)

--- a/views/add_crop_calendar.hbs
+++ b/views/add_crop_calendar.hbs
@@ -12,6 +12,10 @@ img.float-center.text-center {
     margin-left: 20px !important;
 }
 
+input.form-check-input {
+    margin-left: 0px !important;
+}
+
 </style>
 
 <div class="container-fluid" style="color: #332C1F;">
@@ -477,7 +481,7 @@ img.float-center.text-center {
                                                                                 or manually create work order:
                                                                             </div>
                                                                             <div class="float-right">
-                                                                                <button type="button" onclick="appendManualWO('#fertilizer_recommendation_table', 0)" class="btn btn-primary" id="add_order">Add Order</button>
+                                                                                <button type="button" onclick="appendManualWO('#fertilizer_recommendation_table', 0)" class="btn btn-primary btn-sm" id="add_order">Add Order</button>
                                                                             </div>
                                                                         </div>
                                                                     </td>
