system revisions 1 and 2

--- a/views/disaster_warnings.hbs
+++ b/views/disaster_warnings.hbs
@@ -8,7 +8,7 @@
 		<div class="col-lg-7 col-xl-8">
 			<div class="h-100 w-100 border border-secondary d-flex flex-column rounded" style="">
                 <div class="text-white w-100 py-2 text-center rounded-top bg-dark">
-                    Precipitation Data
+                    Historical Precipitation Data ({{precip_data_range}})
                 </div>
                 <div class="h-100 w-100">
                      <canvas id="precip_chart" style="width: 500px; height: 100% !important;"></canvas>     
@@ -20,7 +20,7 @@
 		<div class="col-lg-5 col-xl-4">
 			<div class="w-100 h-100 border border-secondary d-flex flex-column rounded" style="">
                 <div class="text-white w-100 py-2 text-center rounded-top bg-dark">
-                    Weather Data
+                    Daily Temperature Data
                 </div>
                 <div class="w-100 d-flex">
                     <div class="form-row ml-3 mt-2">
