--- a/views/farm_productivity_report.hbs
+++ b/views/farm_productivity_report.hbs
@@ -237,7 +237,7 @@
 
 							                {{#if crop_plans}}
 							                <div class="form-group ml-2">
-							                  <label class="ml-1" for="farm_filter">Farms</label>
+							                  <label class="ml-1" for="farm_filter">Crop Cycles</label>
 							                    <div class="dropdown">
 							                      <button class="btn btn-default dropdown-toggle" type="button" 
 							                              id="dropdownMenu1" data-toggle="dropdown" 
@@ -309,7 +309,7 @@
 								            <div class="w-75 mr-4 d-flex flex-column rounded" style="">
 								                <div class="text-white w-100 py-2 text-center  bg-dark">
 								                    <div>
-								                        Crop Production <small>(in cavans/ha)</small>
+								                        Total Crop Production Per Seed <small>(in cavans/ha)</small>
 								                    </div>
 								                    <!-- <small>actual vs forecasted</small> -->
 								                </div>
@@ -322,7 +322,7 @@
 								            {{#if consumption_chart}}
 							                <div class="w-25 ml-3 d-flex flex-column rounded" style="">
 							                    <div class="text-white w-100 py-2 text-center bg-dark">
-							                        Fertilizer Consumption <small>(in grams/ha)</small>
+							                        Total Fertilizer Consumption by Nutrient <small>(in grams/ha)</small>
 							                    </div>
 							                    <div class="w-100">
 							                        <canvas id="fertilizer_consumption" style="height: 250px;"></canvas>
