--- a/views/home_v2.hbs
+++ b/views/home_v2.hbs
@@ -86,7 +86,7 @@
         <div class="col-lg-7 col-xl-8">
             <div class="card shadow mb-4">
                 <div class="card-header d-flex justify-content-between align-items-center" style="background: #939C1F;height: auto;padding: 16px 20px;">
-                    <h6 class="font-weight-bold m-0" style="color: #FFFFFF;">Weather Forecast</h6>
+                    <h6 class="font-weight-bold m-0" style="color: #FFFFFF;">14-Day Weather Forecast</h6>
                 </div>
 
                 <div class="bg-secondary forecast_body">
@@ -179,7 +179,7 @@
                                     
                                     <div class="card shadow mb-4">
                                         <div class="card-header d-flex justify-content-between align-items-center" style="background: #939C1F;padding: 16px 20px;height: auto;">
-                                            <h6 class="font-weight-bold m-0" style="color: #FFFFFF;">Weekly WO <small>(by status)</small></h6>
+                                            <h6 class="font-weight-bold m-0" style="color: #FFFFFF;">Weekly WO ({{firstDay}} to {{lastDay}}) <!-- <small>(by status)</small> --></h6>
                                         </div>
                                         <div class="card-body" style="min-height: 181px;">
                                             <div class="w-100">
